26 - stuck tasks